--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-pool": "^3.6.1"
   }
 }
