--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "moment-timezone": "^0.5.43",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1"
   }
