--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "pg": "^8.11.3",
-    "pg-pool": "^3.6.1"
+    "pg-pool": "^3.6.1",
+    "socket.io": "^4.7.2"
   }
 }
