--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.0.1",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
+    "redis": "^4.6.11",
     "socket.io": "^4.7.2"
   }
 }
