--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1515.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -15,6 +16,7 @@
     "moment-timezone": "^0.5.43",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
