--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
     "aws-sdk": "^2.1515.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
