--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
     "redis": "^4.6.11",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
